--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ crossterm = "0.28.1"
 glam = "0.29.0"
 paste = "1.0.15"
 rand_distr = "0.4.3"
+rgb = "0.8.50"
 unicode-width = { version = "0.2.0", default-features = false }
 
 [dev-dependencies]
