--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/lib.rs"
 bitflags = "2.6.0"
 crossterm = "0.28.1"
 glam = "0.29.0"
+line_drawing = "1.0.0"
 paste = "1.0.15"
 rand_distr = "0.4.3"
 rgb = "0.8.50"
@@ -21,3 +22,4 @@ unicode-width = { version = "0.2.0", default-features = false }
 
 [dev-dependencies]
 rand = "0.8.5"
+rapier2d = "0.22.0"
